@@ -351,6 +351,11 @@ implemented the cancel button of the task panel.
 added menu.
 </p>
 </li>
+<li>
+<p>
+restore position of vertical/horizaton spliters.
+</p>
+</li>
 </ul></div>
 </div>
 </div>
@@ -496,7 +501,7 @@ Initial release.
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-12-04 23:16:56 CET
+Last updated 2013-12-07 20:03:29 CET
 </div>
 </div>
 </body>
