@@ -413,7 +413,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkPaned" id="paned1">
+          <object class="GtkPaned" id="vpaned">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
@@ -460,7 +460,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkPaned" id="paned2">
+              <object class="GtkPaned" id="hpaned">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="orientation">vertical</property>
